# Freido

./: BENCHMARK_AUDIT.md  README.md  __init__.py  benchmark_audit.py  benchmark_audit_results.json  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  redaudit.py  requirements.txt  sanity.py  server.py  smoke.py
Benchmark_audit/: BENCHMARK_AUDIT.md  README.md  benchmark_audit_results.json
Exploit audit/: README.md  RED_TEAM_REPORT.md  red_team_audit_results.json
server/: app.py
tasks/: easy.py  hard.py  medium.py
