[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freido-openenv"
version = "0.1.0"
description = "Forensic fraud investigation OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.3",
    "httpx<0.28",
    "openai>=1.14.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "models", "graders", "inference"]
packages = ["tasks", "server"]
